2003-06-28  Dafydd Harries  <daf@parnassus.ath.cx>

	* gconf/gconftool.c (main): Slight extra option tweaking.

2003-06-26  Dafydd Harries  <daf@parnassus.ath.cx>

	* gconf/gonftool.c (main): Tidied up "--foo option must be used by
	itself" messages.

2003-06-26  Ross Golder  <ross@golder.org>

	* gconf/gconftool.c (do_dissociate_schema): Fixed a misleading
	string (#116042)
 	* gconf/gconftool.c (do_associate_schema): Prevent segfault when
	no args supplied (#116040)
 	* gconf/gconftool.c (do_dissociate_schema): Prevent segfault when
	no args supplied (#116040)
 
2003-06-26  Abel Cheung  <maddog@linux.org.hk>
  
  	* configure.in: Added "am" "mk" to ALL_LINGUAS.

2003-06-26  Abel Cheung  <maddog@linux.org.hk>

	* configure.in: Added "am" "mk" to ALL_LINGUAS.

2003-06-23  Havoc Pennington  <hp@redhat.com>

	* NEWS: update

	* configure.in: 2.3.3

2003-06-22  James M. Cape  <jcape@ignore-your.tv>

	* gconf/gconf-database.c: Fix for GCC 3.3 warning (fixes #115722).

2003-06-18	Mohammad DAMT  <mdamt@bisnisweb.com>

	* po/id.po: Added Indonesian translation
	* configure.in: Added "id" to ALL_LINGUAS

2003-06-18  Rodrigo Moya <rodrigo@ximian.com>

	Fixes #73323

	* gconf/gconf-sources.h: moved GConfUnsetFlags enum...

	* gconf/gconf-value.h: ...to here.

	* gconf/gconf-client.[ch] (gconf_client_recursive_unset):
	implemented new function for calling the unrecursive_unset
	method on the engine.

2003-06-12  Guntupalli Karunakar  <karunakar@freedomink.org>

	* configure.in: Added "ml" in ALL_LINGUAS.

2003-06-06  Michael Meeks  <michael@ximian.com>

	* configure.in: remove the explicit linc module.

2003-05-31  Michael Meeks  <michael@ximian.com>

	* backends/markup-tree.c: include <stdio.h>

2003-05-19  Ross Burton  <ross@burtonini.com>

	* gconf/gconftool.c: Implement uninstalling GConf schemas, closing
	#104487. Patch based on work by jmmv@hispabsd.org <Julio Merino>.

2003-05-19  Telsa Gwynne  <hobbit@aloss.ukuu.org.uk>

	* configure.in: Add cy (Welsh) to ALL_LINGUAS
